added front end controller for users

--- a/views/index.html
+++ b/views/index.html
@@ -33,6 +33,7 @@
 
   <!-- custom script (angular app) -->
   <script type="text/javascript" src="scripts/app.js"></script>
+  <script type="text/javascript" src="scripts/controllers/userFront.js"></script>
 
   <title>FlyLab</title>
 </head>
