--- a/views/index.html
+++ b/views/index.html
@@ -34,40 +34,46 @@
   <!-- custom script (angular app) -->
   <script type="text/javascript" src="scripts/app.js"></script>
   <script type="text/javascript" src="scripts/controllers/userFront.js"></script>
+  <script type="text/javascript" src="scripts/controllers/weather.js"></script>
 
   <title>FlyLab</title>
 </head>
-<body ng-controller="MainController as main">
-  <nav class="navbar navbar-default">
+<body>
+  <section ng-controller="MainController as main">
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">FlyLab</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="/">Home</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li ng-show="!main.currentUser()"><a ui-sref="signup">Sign Up</a></li>
+            <li ng-show="!main.currentUser()"><a ui-sref="login">Log In</a></li>
+            <li ng-show="main.currentUser()"><a ui-sref="profile">{{main.currentUser().displayName}}</a></li>
+            <li ng-show="main.currentUser()"><a ui-sref="logout">Log Out</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">FlyLab</a>
-      </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="/">Home</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li ng-show="!main.currentUser()"><a ui-sref="signup">Sign Up</a></li>
-          <li ng-show="!main.currentUser()"><a ui-sref="login">Log In</a></li>
-          <li ng-show="main.currentUser()"><a ui-sref="profile">{{main.currentUser().displayName}}</a></li>
-          <li ng-show="main.currentUser()"><a ui-sref="logout">Log Out</a></li>
-        </ul>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <ui-view>
+        </div>
       </div>
     </div>
-  </nav>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <ui-view>
-      </div>
-    </div>
-  </div>
+  </section>
+  <section ng-controller="WeatherController as weather">
+      
+  </section>
 </body>
 </html>
