--- a/views/index.html
+++ b/views/index.html
@@ -32,10 +32,11 @@
 
 
   <!-- custom script (angular app) -->
+
   <script type="text/javascript" src="scripts/app.js"></script>
   <script type="text/javascript" src="scripts/controllers/userFront.js"></script>
-  <script type="text/javascript" src="scripts/controllers/weather.js"></script>
-
+  <script type="text/javascript" src="scripts/controllers/locasController.js"></script>
+  <script src="directives/locaDirective.js"></script>
   <title>FlyLab</title>
 </head>
 <body>
@@ -71,9 +72,6 @@
         </div>
       </div>
     </div>
-  </section>
-  <section ng-controller="WeatherController as weather">
-      
   </section>
 </body>
 </html>
