--- a/public/templates/locaDirective.html
+++ b/public/templates/locaDirective.html
@@ -6,9 +6,9 @@
 		<div class="collapse" id="collapse{{id}}">
 		  <div class="card card-block">
 		  	<ul>
-		  		<li>City, State {{citystate}}</li>
+<!-- 		  <li>City, State {{citystate}}</li>
 		  		<li>Icon Path: {{currenticon}}</li>
-		  		<li>Elevation: {{elevation}}</li>
+		  		<li>Elevation: {{elevation}}</li> -->
 		  		<li>Feels Like: {{feelslike}}</li>
 		  		<li>Current Temp: {{currenttemp}}</li>
 		  		<li>Pressure: {{pressure}}</li>
