--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -16,17 +16,7 @@
 <section ng-controller="LocaController as locaController">
 	<div ng-repeat="location in locaController.locasList">
 	  <loca
-	  	id="{{location.id}}"
-			citystate="{{location.current.city_state}}"	
-			elevation="{{location.current.elevation}}"
-			feelslike="{{location.current.feels_like}}"
-			currenticon="{{location.current.icon}}"
-			currenttemp="{{location.current.temp}}"
-			pressure="{{location.current.pressure}}"
-			pressuretrend="{{location.current.pressure_trend}}"
-			currentcondition="{{location.current.weather}}"
-			currentwinddir="{{location.current.wind_dir}}"
-			currentwindmph="{{location.current.wind_mph}}"
+			location="location"
 	  ></loca>
 	</div>	
 </section>
