chartin off branch

--- a/views/index.html
+++ b/views/index.html
@@ -20,6 +20,10 @@
   <!-- map.js ** this drops in the map -->
   <!-- <script type="text/javascript" src='scripts/map.js'></script> -->
 
+
+  <!-- Chart.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
+
   <!-- bootstrap js -->
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
@@ -101,6 +105,6 @@
  <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwzjycwkTpTqZb9H--_zIMfbiB2KOKwA8&callback=initMap">
     </script>    
-
+<!--   <canvas id="myChart" width="200" height="200"></canvas> -->
 </body>
 </html>
