--- a/public/templates/locaDirective.html
+++ b/public/templates/locaDirective.html
@@ -1,7 +1,7 @@
 <section>
 	<div class="card">
 	<div class="card-header row" data-toggle="collapse" data-target="#collapse{{location.id}}" aria-expanded="false" aria-controls="collapseExample">
-	<h4 class="">{{location.current.citystate}} {{location.current.elevation}} <span class="pull-right">{{location.current.temp}}</span><img class="pull-right" src="{{location.current.icon}}"></h4>
+	<h4 class="">{{location.current.city_state}} {{location.current.elevation}} <span class="pull-right">{{location.current.temp}}</span><img class="pull-right" src="{{location.current.icon}}"></h4>
 		</div>
 		<div class="collapse" id="collapse{{location.id}}">
 		  <div class="card card-block">
