--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,9 @@
 
   <!-- jquery -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+  
+  <!-- chart.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
 
   <!-- map.js ** this drops in the map -->
   <!-- <script type="text/javascript" src='scripts/map.js'></script> -->
@@ -92,6 +95,8 @@
 
   </section>
 
+
+
   <!-- <div id='map'></div>
   <section ng-controller='FlowController as flow'></section>
      <br><br><br>
@@ -103,4 +108,5 @@
     </script>    
 
 </body>
+    <!-- <script type="text/javascript" src="scripts/chartin.js"></script> -->
 </html>
