map sourced data to loca directive

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -14,8 +14,8 @@
 	<br>
 </div>
 
-<section ng-controller="LocaController as locaController">
-	<div ng-repeat="location in locaController.locasList">
+<section ng-controller="WeatherController as weatherController">
+	<div ng-repeat="location in weatherController.locasList">
 	  <loca
 			location="location"
 	  ></loca>
