--- a/public/templates/locaDirective.html
+++ b/public/templates/locaDirective.html
@@ -17,6 +17,6 @@
 		  </div>
 		</div>
 	</div>
-  <canvas id="myChart" width="200" height="200"></canvas>
-    <script type="text/javascript" src="scripts/chartin.js"></script>
+		<canvas id="myChart" width="200" height="200"></canvas>
+    <!-- <script type="text/javascript" src="scripts/chartin.js"></script> -->
 </section>
