--- a/views/index.html
+++ b/views/index.html
@@ -90,7 +90,9 @@
   </section>
 
   <section ng-controller="WeatherController as weather"> 
+  <p>CHART</p>
   <div id='map'></div>
+  <p>CHART</p>
 
 
   </section>
