--- a/public/templates/locaDirective.html
+++ b/public/templates/locaDirective.html
@@ -15,7 +15,10 @@
 		  		<li>Current Wind MPH: {{location.current.wind_mph}}</li>
 		  	</ul>
 		  </div>
-		</div>
-	</div>
+<!-- <canvas id="myChart" width="200" height="200"></canvas> -->
 
+		</div>
+		<canvas id="myChart{{location.id}}" class="chart"></canvas>
+
+	</div>
 </section>
