--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -5,6 +5,38 @@
 	background-color: yellow;
 	margin: 0 auto;
 }
+ul {
+	list-style: none;
+}
 .chart {
 	height: 300px;
+}
+.flex-container {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.flex-item {
+  background: tomato;
+  padding: 5px;
+  margin: 0 1px 0 1px;
+  width: 23%;
+  height: 300px;
+  margin-top: 5px;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  text-align: center;
+  flex-grow: 1;
+  border-radius: 5px;
 }
