--- a/views/index.html
+++ b/views/index.html
@@ -81,7 +81,7 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-12">
           <ui-view>
         </div>
       </div>
