added landing and about pages

--- a/public/templates/landing.html
+++ b/public/templates/landing.html
@@ -1,1 +1,20 @@
-<h1>hello landing page</h1>
+<section class="frontlanding">
+	<button id='about'><a href="/about">About</a></button>
+
+	<h1 id='title'>FISH HAPPENS</h1>
+	
+	<p class='text'>Fish Happens is a <span id='friend'> User-Friendly</span> app for fisherman of <span id='under'>all abilities</span> who simply want to know how to plan for the current weather at their favorite spot. We agree that it's better to <span id='how'>'Know Before You Go'</span>, so we decided to make an App that would provide exactly that: The most up-to-date conditions for weather and streamflow. 
+
+	Sign up and log in to begin using Fish Happens!</p>
+
+	<br>
+	<br>
+<!-- 	<a href="/home">Home</a><br> -->
+	<button class="homebutton" href='/home'><a href="/home">Home</a></button><br>
+</section>
+
+	<div class="fullscreen-bg">
+	    <video loop muted autoplay poster='videos/fishImage.png' class="fullscreen-bg__video">
+	        <source src="videos/newFishVid.mp4" type="video/webm">
+	    </video>
+	</div>
