--- a/views/index.html
+++ b/views/index.html
@@ -71,6 +71,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/home">Search</a></li>
             <li><a href="/hatches">Hatches</a></li>
+            <li><a href="/patterns">Flies</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li ng-show="!main.currentUser()"><a ui-sref="signup">Sign Up</a></li>
