fixes video path

--- a/public/templates/landing.html
+++ b/public/templates/landing.html
@@ -14,7 +14,7 @@
 </section>
 
 	<div class="fullscreen-bg">
-	    <video loop muted autoplay poster='videos/fishImage.png' class="fullscreen-bg__video">
+	    <video loop muted autoplay poster='public/videos/fishImage.png' class="fullscreen-bg__video">
 	        <source src="videos/newFishVid.mp4" type="video/webm">
 	    </video>
 	</div>
