styling about, landing

--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -1,4 +1,4 @@
-<section class="centered">
+<section class="centered aboutTime">
 	<h1 class='theH1'>About Us</h1>
 	<br><br>
 	<div class='holder'>
@@ -6,29 +6,25 @@
 	<div class='row' id='allPhotos'>
 	    <div class='col-sm-4'>
 	        <li class='theLi'>
-	            <h3 class='theH3'>Tyler Shockey<br>
+	            <h3 class='theH3'><a href='https://github.com/shockeyt' class="githubLink">Tyler Shockey</a></h3><br>
 	                <img class='profile' src='images/tyler.png'><br>
-	                Tyler is the fearless leader, he helped pull us up by our bootstrap CDN's when we were feelingdown.<br>
-	                <a href='https://github.com/shockeyt'>Tyler's Github</a>
-	            </h3>
+	                <p class="bio">Tyler is the fearless leader, he helped pull us up by our bootstrap CDN's when we were feeling down./p><br>
+	            
 	        </li>
 	    </div>
 	    <div class='col-sm-4'>
 	        <li class='theLi'>
-	            <h3 class='theH3'>Bob Schank<br>
+	            <h3 class='theH3'><a href='https://github.com/bobbyschank' class="githubLink">Bob Schank</a></h3><br>
 	                <img class='profile' src='images/bob.png'><br>
-	                This is Bob. He really loves SQL and fishing<br>
-	                <a href='https://github.com/bobbyschank'>Bob's Github</a>
-	            </h3>
+	                <p class="bio">This is Bob. He loves SQL, and sometimes fishing.</p><br>
+	            
 	        </li>
 	    </div>
 	    <div class='col-sm-4'>
 	        <li class='theLi'>
-	            <h3 class='theH3'>Alex Crangghton<br>
+	            <h3 class='theH3'><a href='https://github.com/alexandroidd' class="githubLink">Alex Crangghton</a><br></h3>
 	                <img class='profile' src='images/alex.jpg'><br>
-	                This is Alex, he writes great comments.<br>
-	                <a href='https://github.com/alexandroidd'>Alex's Github</a>
-	            </h3>
+	                <p class="bio">This is Alex, he writes great comments.</p><br>
 	        </li>
 	    </div>
 	</ul>
