--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -74,7 +74,7 @@ h1, h2, h3, h4, p, li {
 }
 
 .loca-container {
-	background-color: rgba(0,0,0,.3);
+	background-color: rgba(0,0,0,.5);
 	padding: 12px;
 	margin-bottom: 20px;
 	border-radius: 5px;
@@ -156,8 +156,8 @@ h1, h2, h3, h4, p, li {
     bottom: 3em;
     width: 20%;
     height: 3em;
-    border-radius: 4px;
-    opacity: 0.7;
+    border-radius: 7px;
+    opacity: 0.9;
     font-size: 20px;
     padding: -30px;
 }
@@ -193,13 +193,15 @@ h1, h2, h3, h4, p, li {
 }
 .profile {
     width: 190px;
-    
+    padding: 8px 0;
+    border-radius: 10px;
 }
 .theH1{
     text-align: center;
 }
 .theH3 {
     display: inline;
+
 }
 .theLi{
     display: inline;    
@@ -216,4 +218,25 @@ h1, h2, h3, h4, p, li {
 }
 .centered {
     text-align: center;
+}
+
+.aboutTime {
+	background-color: rgba(0,0,0,.5);
+	padding: 12px;
+	margin-bottom: 20px;
+	border-radius: 5px;
+}
+
+.githubLink {
+	color: #aacbff;
+	text-decoration: underline;
+}
+.bio {
+	font-size: 18px;
+}
+.aboutAnchor {
+	padding: 7px;
+}
+.currentConditions {
+	font-size: 20px;
 }
