--- a/public/templates/landing.html
+++ b/public/templates/landing.html
@@ -11,7 +11,7 @@
 	<br>
 	<br>
 <!-- 	<a href="/home">Home</a><br> -->
-	<button class="homebutton" href='/home'><a href="/home">Enter</a></button><br>
+	<a href="/home" class="btn homebutton">Enter</a><br>
 </section>
 
 	<div class="fullscreen-bg">
