--- a/views/index.html
+++ b/views/index.html
@@ -56,7 +56,7 @@
 <body>
   <div class="container-fluid">
   <section ng-controller="MainController as main">
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
