--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -9,11 +9,11 @@
 <!-- <a href="#" ng-click="profile.showEditForm=true" ng-hide="profile.showEditForm" class="btn btn-default"><i class="fa fa-pencil"></i> Edit Profile</a> -->
 
 
-<h2>SAVED SPOTS</h2>
-<section ng-controller="SpotController as spot">
-	<h4>Coordinates</h4>
-	<ul>
-		<li ng-repeat="places in spot.locations">
+<h2 class="savedTitle">SAVED SPOTS</h2>
+<section class="loca-container" ng-controller="SpotController as spot">
+	<h4 class="coordTitle">Coordinates</h4>
+	<ul class="spotList">
+		<li class="coordList" ng-repeat="places in spot.locations">
 			{{places.coordinates}}
 			<button class="btn btn-danger delete" ng-click="spot.deleteLocation(places)">X</button>
 			<button class="btn btn-warning engage" ng-click="spot.getData(places)">DATA</button>
