fixes many issues

--- a/public/templates/landing.html
+++ b/public/templates/landing.html
@@ -15,6 +15,6 @@
 
 	<div class="fullscreen-bg">
 	    <video loop muted autoplay poster='videos/fishImage.png' class="fullscreen-bg__video">
-	        <source src="public/videos/newFishVid.mp4" type="video/webm">
+	        <source src="videos/newFishVid.mp4" type="video/webm">
 	    </video>
 	</div>
